# TrashGuySDL2

./: .gitmodules  CMakeLists.txt  common.h  main.c
templates/: tguy.html
